k8s/fluentd-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
spec:
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      labels:
        app: fluentd
    spec:
      containers:
        - name: fluentd
          image: fluent/fluentd:v1.12
          volumeMounts:
            - name: config
              mountPath: /fluentd/etc
      volumes:
        - name: config
          configMap:
            name: fluentd-config
