k8s/mediator-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: mediator
  name: mediator
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 8080
  selector:
    io.kompose.service: mediator
status:
  loadBalancer: {}
